# -robotics

./: foward_and_inverse_kinematics.py
arm_project/: homogeneous_transformation_matrix.py
arm_project/install/: setup.sh
arm_project/install/arm_interfaces/include/arm_interfaces/arm_interfaces/srv/detail/: follow_trajectory__builder.hpp  follow_trajectory__description.c  follow_trajectory__functions.h
arm_project/install/grupo_1/share/grupo_1/: package.sh  package.zsh
arm_project/ros2_ws/install/: setup.sh
arm_project/ros2_ws/install/arm_interfaces/share/arm_interfaces/cmake/: arm_interfaces__rosidl_typesupport_cExport.cmake
arm_project/ros2_ws/install/grupo_1/share/grupo_1/: package.sh
arm_project/ros2_ws/install/projeto_braco/share/projeto_braco/: package.dsv  package.sh  package.zsh
arm_project/ros2_ws/install/py_pubsub/share/py_pubsub/: package.sh
arm_project/ros2_ws/src/grupo_1/: setup.cfg  setup.py
arm_project/ros2_ws/src/install/: local_setup.sh  setup.zsh
arm_project/ros2_ws/src/install/arm_interfaces/share/arm_interfaces/cmake/: export_arm_interfaces__rosidl_generator_pyExport-noconfig.cmake  (+1 more)
arm_project/ros2_ws/src/install/grupo_1/lib/grupo_1/: client
arm_project/ros2_ws/src/install/grupo_1/share/grupo_1/: package.dsv  package.sh
arm_project/ros2_ws/src/install/py_srvcli/share/py_srvcli/: package.sh  package.xml
car_project/lidar/: CMakeLists.txt  lidar.cpp  lidar_teste.cpp
car_project/robot@192.168.1.100/: CMakeLists.txt  lidar_listener.cpp  lidar_teste.cpp
car_project/robot@192.168.1.100/robot@192.168.1.100/lidar/robot@192.168.1.100/robot@192.168.1.100/: CMakeLists.txt
install/: local_setup.sh
install/arm_interfaces/include/arm_interfaces/arm_interfaces/srv/detail/: follow_trajectory__rosidl_typesupport_introspection_c.h
install/arm_interfaces/share/arm_interfaces/: package.sh
install/grupo_1/share/grupo_1/: package.ps1
log/: latest_build
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/arm_interfaces/share/arm_interfaces/: package.sh
ros2_ws/install/grupo_1/share/grupo_1/: package.bash  package.xml
ros2_ws/install/projeto_braco/share/ament_index/resource_index/parent_prefix_path/: projeto_braco
ros2_ws/install/projeto_braco/share/projeto_braco/: package.bash  package.ps1  package.xml
ros2_ws/install/py_pubsub/share/py_pubsub/: package.xml
ros2_ws/log/: latest_build
ros2_ws/src/grupo_1/grupo_1/: client.py  robot.py  teste.py
ros2_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/install/arm_interfaces/share/arm_interfaces/: package.sh
ros2_ws/src/log/: latest_build
ros2_ws/src/projeto_braco/: package.xml  setup.cfg  setup.py
ros2_ws/src/projeto_braco/projeto_braco/: client.py  robot.py
ros2_ws/src/py_srvcli/: setup.py
ros2_ws/src/py_srvcli/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/py_srvcli/install/py_srvcli/share/py_srvcli/: package.sh
ros2_ws/src/py_srvcli/log/: latest_build
ros2_ws/src/py_srvcli/py_srvcli/: client_member_function.py
ros2_ws/src/tutorial_interfaces/: CMakeLists.txt  package.xml
(+10 files in other folders)
